Fix a few errors for errorprone 2.47.0 (#12038)
Most notably the `[JdkObsolete] Use URLDecoder.decode(String, Charset) instead` _error_, plus a few other warnings in the affected source files.

This unblocks #12036