@@ -16,6 +16,7 @@
 package org.projectnessie.client.auth.oauth2;
 
 import static java.net.HttpURLConnection.HTTP_OK;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
@@ -110,7 +111,7 @@ public class KeycloakAuthorizationCodeResourceOwnerEmulator
               callbackUrl.getHost(),
               callbackUrl.getPort(),
               callbackUrl.getPath(),
-              "code=" + URLEncoder.encode(code, "UTF-8") + "&state=" + params.get("state"),
+              "code=" + URLEncoder.encode(code, UTF_8) + "&state=" + params.get("state"),
               null);
     }
     HttpURLConnection conn = (HttpURLConnection) callbackUrl.toURL().openConnection();
